--- a/src/components/homepage/Home.css
+++ b/src/components/homepage/Home.css
@@ -1,78 +1,77 @@
-.home{
-    position: relative;
-    width: 100%;
-    height: 100vh;
+.home-container {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 70px 10% 0;
-}
-
-.home-content{
-    max-width: 600px;
-    color: white;
-}
-
-.home-content h3{
-    font-size: 32px;
-    font-weight: 700;
-}
-
-
-.home-content h1{
-    font-size: 56px;
-    font-weight: 700;
-    margin: -3px 0;
-}
-
-.home-content h3 span{
-    color: #0ef;
-}
-
-.home-img img {
-    max-width: 450px;
-
-}
-
-.home-content h3:nth-of-type(2){
-    margin-bottom: 30px;    
-}
-
-.home-content p{
-    font-size: 16px;
-
-}
-
-.social-media a {
-    display: inline-flex;
     justify-content: center;
     align-items: center;
-    width: 40px;
-    height: 40px;
-    background: transparent;
-    border: 2px solid #0ef;
-    border-radius: 50%;
+    flex-wrap: wrap;
+    padding: 20px 10%;
+    height: auto;
+}
+
+.book {
+    width: 250px;
+    border: 1px solid white;
+    margin: 25px;
+    border-radius: 5px;
+    padding: 10px 10px 10px 10px;
+
+}
+
+.cover {
+    border: 2px solid gray;
+    height: 300px;
+}
+
+.cover img {
+    width: 100%;
+    height: 100%;
+}
+
+.description {
+    margin-top: 12px;
+}
+
+
+.description span.title {
+    margin-top: 12px;
+    font-size: 25px;
+    color: white;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+.description span.author {
+    margin-top: 12px;
     font-size: 20px;
-    color: #0ef;
-    text-decoration: none;
-    margin: 30px 15px 30px 0px;
+    color: white;
+font-family: Verdana, Geneva, Tahoma, sans-serif;}
 
+.book .author {
+    font-size: 18px;
 }
 
-.social-media a:hover {
-    background: #0ef;
-    color: black;
-    box-shadow: 0 0 20px #0ef;
+h1 {
+    color: gray;
+    text-align: center;
+    font-size: 50px;
+    margin-bottom: -3px;
 }
 
-.btn{
-    display: inline-block;
-    padding: 12px 28px;
-    background: #0ef;
-    border-radius: 40px;
-    box-shadow: 0 0 10px #0ef;
+.assign {
+    text-align: center;
+    margin-top: 15px;
+}
+
+.assign-btn {
+    padding: 5px 20px;
     font-size: 16px;
-    color: black;
-    letter-spacing: 1px;
-    text-decoration: none;
+    background-color: #3498db;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
 }
+
+.assign-btn:hover {
+    outline: none;
+    background-color: lightgreen;
+  }
