--- a/src/components/authentication/Auth.css
+++ b/src/components/authentication/Auth.css
@@ -1,183 +1,109 @@
-/* Google Fonts - Poppins */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+/* Import Google font - Poppins */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
-.form-container {
-    height: 100vh;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #1f242d;
-    column-gap: 30px;
+.error,
+.alert-danger {
+  list-style: None;
+  text-align: center;
+  color: red;
+  padding: 10px;
 }
 
-.form {
-    max-width: 430px;
-    width: 100%;
-    padding: 30px;
-    border-radius: 6px;
-    background: #FFF;
+.g-recaptcha {
+  transform: scale(1.2, 0.9);
+  transform-origin: 0 0;
 }
 
-
-header {
-    font-size: 28px;
-    font-weight: 600;
-    color: #232836;
-    text-align: center;
+body {
+  /* min-height: 100vh;
+  width: 100%; */
+  background: #009579;
+}
+.auth-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 430px;
+  width: 100%;
+  background: #fff;
+  border-radius: 7px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
 }
 
-form {
-    margin-top: 30px;
+.auth-container .form {
+  padding: 2rem;
 }
-
-.form .field {
-    position: relative;
-    height: 50px;
-    width: 100%;
-    margin-top: 20px;
-    border-radius: 6px;
+.form-head {
+  font-size: 2rem;
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 3rem;
 }
-
-.field input,
-.field button {
-    height: 100%;
-    width: 100%;
-    border: none;
-    font-size: 16px;
-    font-weight: 400;
-    border-radius: 6px;
+.form input {
+  height: 50px;
+  width: 100%;
+  padding: 0 15px;
+  font-size: 17px;
+  margin-bottom: 1.3rem;
+  border: 1px solid gray;
+  border-radius: 6px;
+  outline: none;
 }
-
-.field input {
-    outline: none;
-    padding: 0 15px;
-    border: 1px solid#CACACA;
+.form input:focus {
+  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
 }
-
-.field input:focus {
-    border-bottom-width: 2px;
-}
-
-.eye-icon {
-    position: absolute;
-    top: 50%;
-    right: 10px;
-    transform: translateY(-50%);
-    font-size: 18px;
-    color: #8b8b8b;
-    cursor: pointer;
-    padding: 5px;
-}
-
-.field button {
-    color: #fff;
-    background-color: #0171d3;
-    transition: all 0.3s ease;
-    cursor: pointer;
-}
-
-.field button:hover {
-    background-color: #016dcb;
-}
-
-.form-link {
-    text-align: center;
-    margin-top: 10px;
-}
-
-.form-link span,
-.form-link a {
-    font-size: 14px;
-    font-weight: 400;
-    color: #232836;
-}
-
 .form a {
-    color: #0171d3;
-    text-decoration: none;
+  font-size: 16px;
+  color: #009579;
+  text-decoration: none;
+}
+.form a:hover {
+  text-decoration: underline;
+}
+.form input.button {
+  color: #fff;
+  background: #009579;
+  font-size: 1.2rem;
+  font-weight: 500;
+  letter-spacing: 1px;
+  margin-top: 1.7rem;
+  cursor: pointer;
+  transition: 0.4s;
 }
 
-.form-content a:hover {
-    text-decoration: underline;
+.form input.button:hover {
+  background: #006653;
 }
 
-.line {
-    position: relative;
-    height: 1px;
-    width: 100%;
-    margin: 36px 0;
-    background-color: #d4d4d4;
+.signup {
+  font-size: 17px;
+  text-align: center;
+}
+.signup a {
+  color: #009579;
+  cursor: pointer;
+  font-size: 16px;
+  text-decoration: none;
+}
+.signup a:hover {
+  text-decoration: none;
 }
 
-.line::before {
-    content: 'Or';
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #FFF;
-    color: #8b8b8b;
-    padding: 0 15px;
+.form .form_error {
+  border: 1px solid red;
 }
 
-.media-options a {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-a.facebook {
-    color: #fff;
-    background-color: #4267b2;
-}
-
-a.facebook .facebook-icon {
-    height: 28px;
-    width: 28px;
-    color: #0171d3;
-    font-size: 20px;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #fff;
-}
-
-.facebook-icon,
-img.google-img {
-    position: absolute;
-    top: 50%;
-    left: 15px;
-    transform: translateY(-50%);
-}
-
-img.google-img {
-    height: 20px;
-    width: 20px;
-    object-fit: cover;
-}
-
-a.google {
-    border: 1px solid #CACACA;
-}
-
-a.google span {
-    font-weight: 500;
-    opacity: 0.6;
-    color: #232836;
-}
-
-@media screen and (max-width: 400px) {
-    .form {
-        padding: 20px 10px;
-    }
-
+#toaster {
+  text-align: center;
+  /* font-size: 18px; */
+  padding: 10px;
+  background-color: lightseagreen;
 }
