--- a/src/components/cart/Cart.css
+++ b/src/components/cart/Cart.css
@@ -101,14 +101,14 @@ select {
   width: 100%;
   background-color: rgb(247, 247, 247);
 }
-/* input {
+input {
   border: 1px solid rgba(0, 0, 0, 0.137);
   padding: 1vh;
   margin-bottom: 4vh;
   outline: none;
   width: 100%;
   background-color: rgb(247, 247, 247);
-} */
+}
 input:focus::-webkit-input-placeholder {
   color: transparent;
 }
