--- a/src/components/cart/Cart.css
+++ b/src/components/cart/Cart.css
@@ -10,6 +10,7 @@
 .title {
   margin-bottom: 5vh;
 }
+
 .card {
   margin: auto;
   margin-top: 50px;
@@ -19,17 +20,21 @@
   border-radius: 1rem;
   border: transparent;
 }
+
 @media (max-width: 767px) {
   .card {
     margin: 3vh auto;
   }
 }
+
 .cart {
   background-color: #fff;
   padding: 4vh 5vh;
   border-bottom-left-radius: 1rem;
   border-top-left-radius: 1rem;
+  overflow-y: scroll;
 }
+
 @media (max-width: 767px) {
   .cart {
     padding: 4vh;
@@ -37,6 +42,7 @@
     border-top-right-radius: 1rem;
   }
 }
+
 .summary {
   background-color: #ddd;
   border-top-right-radius: 1rem;
@@ -44,55 +50,70 @@
   padding: 4vh;
   color: rgb(65, 65, 65);
 }
+
 @media (max-width: 767px) {
   .summary {
     border-top-right-radius: unset;
     border-bottom-left-radius: 1rem;
   }
 }
+
 .summary .col-2 {
   padding: 0;
 }
+
 .summary .col-10 {
   padding: 0;
 }
+
 .row {
   margin: 0;
 }
+
 .title b {
   font-size: 1.5rem;
 }
+
 .main {
   margin: 0;
   padding: 2vh 0;
   width: 100%;
 }
+
 .col-2,
 .col {
   padding: 0 1vh;
 }
+
 a {
   padding: 0 1vh;
 }
+
 .close {
   margin-left: auto;
   font-size: 0.7rem;
 }
+
 img {
   width: 3.5rem;
 }
+
 .back-to-shop {
   margin-top: 4.5rem;
 }
+
 h5 {
   margin-top: 4vh;
 }
+
 hr {
   margin-top: 1.25rem;
 }
+
 form {
   padding: 2vh 0;
 }
+
 select {
   border: 1px solid rgba(0, 0, 0, 0.137);
   padding: 1.5vh 1vh;
@@ -101,6 +122,7 @@ select {
   width: 100%;
   background-color: rgb(247, 247, 247);
 }
+
 input {
   border: 1px solid rgba(0, 0, 0, 0.137);
   padding: 1vh;
@@ -109,9 +131,11 @@ input {
   width: 100%;
   background-color: rgb(247, 247, 247);
 }
+
 input:focus::-webkit-input-placeholder {
   color: transparent;
 }
+
 .btn {
   background-color: #000;
   border-color: #000;
@@ -122,6 +146,7 @@ input:focus::-webkit-input-placeholder {
   padding: 1vh;
   border-radius: 0;
 }
+
 .btn:focus {
   box-shadow: none;
   outline: none;
@@ -131,22 +156,24 @@ input:focus::-webkit-input-placeholder {
   -webkit-user-select: none;
   transition: none;
 }
+
 .btn:hover {
   color: white;
 }
+
 a {
   color: black;
 }
+
 a:hover {
   color: black;
   text-decoration: none;
 }
+
 #code {
-  background-image: linear-gradient(
-      to left,
+  background-image: linear-gradient(to left,
       rgba(255, 255, 255, 0.253),
-      rgba(255, 255, 255, 0.185)
-    ),
+      rgba(255, 255, 255, 0.185)),
     url("https://img.icons8.com/small/16/000000/long-arrow-right.png");
   background-repeat: no-repeat;
   background-position-x: 95%;
