--- a/src/components/cart/Cart.css
+++ b/src/components/cart/Cart.css
@@ -1,12 +1,3 @@
-/* body{
-    background: #ddd;
-    min-height: 100vh;
-    vertical-align: middle;
-    display: flex;
-    font-family: sans-serif;
-    font-size: 0.8rem;
-    font-weight: bold;
-} */
 .title {
   margin-bottom: 5vh;
 }
@@ -161,19 +152,21 @@ input:focus::-webkit-input-placeholder {
   color: white;
 }
 
-a {
+a.quantity {
   color: black;
 }
 
-a:hover {
+/* a:hover {
   color: black;
   text-decoration: none;
-}
+} */
 
 #code {
-  background-image: linear-gradient(to left,
+  background-image: linear-gradient(
+      to left,
       rgba(255, 255, 255, 0.253),
-      rgba(255, 255, 255, 0.185)),
+      rgba(255, 255, 255, 0.185)
+    ),
     url("https://img.icons8.com/small/16/000000/long-arrow-right.png");
   background-repeat: no-repeat;
   background-position-x: 95%;
