--- a/src/components/authentication/Auth.css
+++ b/src/components/authentication/Auth.css
@@ -21,11 +21,26 @@
   transform-origin: 0 0;
 }
 
-body {
+body::-webkit-scrollbar {
   /* min-height: 100vh;
   width: 100%; */
-  background: #009579;
+  display: none;
 }
+
+/* hide scrollbar but allow scrolling */
+element {
+  -ms-overflow-style: none;
+  /* for Internet Explorer, Edge */
+  scrollbar-width: none;
+  /* for Firefox */
+  overflow-y: scroll;
+}
+
+element::-webkit-scrollbar {
+  display: none;
+  /* for Chrome, Safari, and Opera */
+}
+
 .auth-container {
   position: absolute;
   top: 50%;
@@ -41,12 +56,14 @@ body {
 .auth-container .form {
   padding: 2rem;
 }
+
 .form-head {
   font-size: 2rem;
   font-weight: 500;
   text-align: center;
   margin-bottom: 3rem;
 }
+
 .form input {
   height: 50px;
   width: 100%;
@@ -57,17 +74,21 @@ body {
   border-radius: 6px;
   outline: none;
 }
+
 .form input:focus {
   box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
 }
+
 .form a {
   font-size: 16px;
   color: #009579;
   text-decoration: none;
 }
+
 .form a:hover {
   text-decoration: underline;
 }
+
 .form input.button {
   color: #fff;
   background: #009579;
@@ -87,12 +108,14 @@ body {
   font-size: 17px;
   text-align: center;
 }
+
 .signup a {
   color: #009579;
   cursor: pointer;
   font-size: 16px;
   text-decoration: none;
 }
+
 .signup a:hover {
   text-decoration: none;
 }
